@@ -12,12 +12,13 @@ return {
 		buildpic = "armbeamer.PNG",
 		buildtime = 5324,
 		canrepeat = false,
+		cantbetransported = false,
 		category = "ALL WEAPON NOTSUB NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 0 -1",
 		collisionvolumescales = "33 85 33",
 		collisionvolumetype = "CylY",
 		corpse = "DEAD",
-		description = "Beam Laser Turret",
+		description = "Beam Laser Turret. Transportable (Heavy)",
 		energystorage = 60,
 		explodeas = "mediumBuildingexplosiongeneric",
 		footprintx = 2,
@@ -25,6 +26,7 @@ return {
 		icontype = "building",
 		idleautoheal = 5,
 		idletime = 1800,
+		mass = 7500,
 		maxdamage = 1290,
 		maxslope = 10,
 		maxwaterdepth = 0,
@@ -118,8 +120,8 @@ return {
 			armbeamer_weapon = {
 				areaofeffect = 8,
 				avoidfeature = false,
-				beamdecay = 0.5,
-				beamtime = 0.1,
+				beamdecay = 0.1,
+				beamtime = 0.05,
 				beamttl = 1,
 				corethickness = 0.233,
 				craterareaofeffect = 0,
