@@ -12,12 +12,13 @@ return {
 		buildpic = "ARMLLT.PNG",
 		buildtime = 2662,
 		canrepeat = false,
+		cantbetransported = false,
 		category = "ALL NOTLAND WEAPON NOTSUB NOTSHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 5 0",
 		collisionvolumescales = "32 77 32",
 		collisionvolumetype = "CylY",
 		corpse = "DEAD",
-		description = "Light Laser Tower",
+		description = "Light Laser Tower. Transportable (Heavy)",
 		energystorage = 20,
 		explodeas = "mediumBuildingExplosionGeneric",
 		footprintx = 2,
@@ -25,6 +26,7 @@ return {
 		icontype = "building",
 		idleautoheal = 5,
 		idletime = 1800,
+		mass = 5100,
 		maxdamage = 560,
 		maxslope = 14,
 		maxwaterdepth = 0,
