@@ -12,18 +12,20 @@ return {
 		buildpic = "ARMRL.PNG",
 		buildtime = 1800,
 		canrepeat = false,
+		cantbetransported = false,
 		category = "ALL NOTLAND WEAPON NOTSUB NOTSHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 0 0",
 		collisionvolumescales = "42 57 42",
 		collisionvolumetype = "CylY",
 		corpse = "DEAD",
-		description = "Anti-air Tower",
+		description = "Light Anti-air Tower. Transportable (Heavy)",
 		explodeas = "mediumBuildingExplosionGeneric",
 		footprintx = 3,
 		footprintz = 3,
 		icontype = "building",
 		idleautoheal = 5,
 		idletime = 1800,
+		mass = 5100,
 		maxdamage = 295,
 		maxslope = 20,
 		maxwaterdepth = 0,
