@@ -14,9 +14,10 @@ return {
 		buildtime = 1137,
 		canattack = false,
 		canrepeat = false,
+		cantbetransported = false,
 		category = "ALL NOTLAND NOTSUB NOWEAPON NOTSHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		corpse = "DEAD",
-		description = "Early Warning System",
+		description = "Early Warning System. Transportable (Heavy)",
 		energymake = 4,
 		energyuse = 4,
 		explodeas = "smallBuildingexplosiongeneric",
@@ -26,6 +27,7 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		losemitheight = 66,
+		mass = 5100,
 		maxdamage = 81,
 		maxslope = 10,
 		maxwaterdepth = 0,
