@@ -12,12 +12,13 @@ return {
 		buildpic = "CORHLLT.PNG",
 		buildtime = 5448,
 		canrepeat = false,
+		cantbetransported = false,
 		category = "ALL NOTLAND WEAPON NOTSUB NOTSHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 12 0",
 		collisionvolumescales = "32 85 32",
 		collisionvolumetype = "CylY",
 		corpse = "DEAD",
-		description = "Anti-Swarm Double LLT",
+		description = "Anti-Swarm Double LLT. Transportable (Heavy)",
 		energystorage = 60,
 		explodeas = "mediumBuildingexplosiongeneric",
 		footprintx = 2,
@@ -25,6 +26,7 @@ return {
 		icontype = "building",
 		idleautoheal = 5,
 		idletime = 1800,
+		mass = 10200,
 		maxdamage = 1500,
 		maxslope = 10,
 		maxwaterdepth = 0,
