@@ -12,12 +12,13 @@ return {
 		buildpic = "CORLLT.PNG",
 		buildtime = 2724,
 		canrepeat = false,
+		cantbetransported = false,
 		category = "ALL NOTLAND WEAPON NOTSUB NOTSHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 1 0",
 		collisionvolumescales = "32 72 32",
 		collisionvolumetype = "CylY",
 		corpse = "DEAD",
-		description = "Light Laser Tower",
+		description = "Light Laser Tower. Transportable (Heavy)",
 		energystorage = 20,
 		explodeas = "mediumBuildingExplosionGeneric",
 		footprintx = 2,
@@ -25,6 +26,7 @@ return {
 		icontype = "building",
 		idleautoheal = 5,
 		idletime = 1800,
+		mass = 5100,
 		maxdamage = 585,
 		maxslope = 10,
 		maxwaterdepth = 0,
