@@ -14,12 +14,13 @@ return {
 		buildtime = 1137,
 		canattack = false,
 		canrepeat = false,
+		cantbetransported = false,
 		category = "ALL NOTLAND NOTSUB NOWEAPON NOTSHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 -12 0",
 		collisionvolumescales = "32 99 32",
 		collisionvolumetype = "CylY",
 		corpse = "DEAD",
-		description = "Early Warning System",
+		description = "Early Warning System. Transportable (Heavy)",
 		energymake = 4,
 		energyuse = 4,
 		explodeas = "smallBuildingexplosiongeneric",
@@ -29,6 +30,7 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		losemitheight = 72,
+		mass = 5100,
 		maxdamage = 81,
 		maxslope = 10,
 		maxwaterdepth = 0,
